fix: navbar,navbar switches, activities, and price section layout and  dark mode

--- a/CascinaCaccia/src/styles/navbar.css
+++ b/CascinaCaccia/src/styles/navbar.css
@@ -43,7 +43,7 @@
 }
 
 .navbar-hamburger {
-  display: block;  
+  display: block;
   position: relative;
 }
 
@@ -64,7 +64,7 @@
   transition: all 0.4s ease;
 }
 
-.navbar-hamburger::before {  
+.navbar-hamburger::before {
   top: -9px;
 }
 
@@ -94,12 +94,11 @@
   flex-direction: column;
   background-color: var(--text-light);
   /* border-top: 1px solid #00000083; */
-  border-radius: 0rem 0rem 1rem 1rem;
+  /* border-radius: 0rem 0rem 1rem 1rem; */
   border-bottom: 2px solid var(--text-dark);
   /* border-width: 0 1px 2px 1px; */
   /* border-style: solid; */
   /* border-color: var(--text-dark); */
-
 }
 
 .navbar-menu.open {
@@ -148,8 +147,8 @@
   bottom: 0;
   border: 1px solid var(--text-dark);
   border-radius: 1250rem;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
@@ -167,13 +166,13 @@
   bottom: 0.125rem;
   background-color: var(--text-dark);
   border-radius: 50%;
-  -webkit-transition: .4s;
-  transition: all .4s;
+  -webkit-transition: 0.4s;
+  transition: all 0.4s;
 }
 
 .switch[for="colorblind-filter"] .slider:before {
   content: "OFF";
-  color: #D0D0D0;
+  color: #d0d0d0;
 }
 
 .switch[for="colorblind-filter"] input:checked + .slider::before {
@@ -188,7 +187,7 @@
   background-position: center;
 }
 
-.switch[for="darkmode-toggle"] input:checked + .slider::before{
+.switch[for="darkmode-toggle"] input:checked + .slider::before {
   background-color: var(--text-light);
   background-image: url(/assets/navbar/moon-icon-black.svg);
 }
